rb/css/tn.less
body {
  max-width: 100%;
  padding-top: 700px;
  transition: 0s linear;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, .04);
}

.margintop100 { margin-top: 100px !important; }
.marginbot100 { margin-bottom: 100px !important; }
.margintop50 { margin-top: 50px !important; }
.marginbot50 { margin-bottom: 50px !important; }

header {
  background: 
  linear-gradient(
    rgba(0, 0, 0, 0.55), 
    rgba(0, 0, 0, 0.55)
  ),
  url(../img/1.jpg) no-repeat 50% 50%;
  min-height: 700px;
  padding-top: 50px;
}

.mainNav, .mainContainer {
  position: relative;
}

.mainNav {
  z-index: 500;
  box-shadow: 0 2px 3px rgba(0,0,0, .4);
  margin-bottom: -80px;
  height:80px;
  letter-spacing: 3px;
}

nav ul a.btn {
  margin-left: 0px;
  margin-right: 10px;
}

.mainNavScrolled, header {
  position: fixed;
  top: 0;
  width: 100%;
}

.smallNav {
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -ms-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  height: 65px;
  .brand-logo {
    font-size: 2rem;
  }
  ul a {
    font-size: 1.2rem;
    height: 65px;
  }
}

.mainContainer {
  background: #ffffff;
  padding-top: 150px;
  z-index: 1;
  h2, h3, h4, h5 {
    letter-spacing: 5px;
    font-weight: 300;
    line-height: 40px;
  }
  h6 {
    letter-spacing: 3px;
    font-weight: 300;
    line-height: 25px;
  }
  h3 {
    font-size: 1.6rem;
  }
}

nav .brand-logo {
  padding-left: 50px;
}

nav ul a,
nav .brand-logo {
  color: #444;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -ms-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
}

nav ul a {
  font-size: 1.5rem;
  height: 80px;
  &:hover {
    color: lighten(#bf360c, 10%);
  }
}

#mainNav li.active a {
  color: #bf360c;
}

.side-nav a {
  font-size: 1.5rem;
}

nav .brand-logo {
  font-size: 2.5rem;
}

p {
  line-height: 2rem;
  letter-spacing: 2px;
}

.button-collapse {
  color: #26a69a;
}

#header {
  h1 {
    font-size: 100px;
    font-weight: 300px;
    letter-spacing: 5px;
  }
  h5 {
    font-weight: 500;
    letter-spacing: 5px;
  }
}


.services {
  padding-top: 50px;
  .first {
    height: 330px;
  }
  .second, .third {
    height: 270px;
  }
}

.hows {
  .first {
    height: 600px;
  }
  .second {
    height: 515px;
  }
  p {
    letter-spacing: .2px;
  }
}

.repo {
  height: 280px;
  a {
    text-transform: uppercase;
    font-size: 18px;
    letter-spacing: 2px;
  }
}

.contacts {
  .hire {
    height: 500px;
    margin-top: -35px;
    a {
      font-size: 24px;
    }
  }
  .careers, .media {
    height: 420px;
    a {
      font-size: 18px;
    }
  }
}

#clients {
  .logowrap {
    border: 0px solid #d7d5cc;
    padding-left: 45px;
    padding-top: 35px;
    padding-bottom: 35px;
  }
  .idt {
    border-top:0px;
    border-left: 0px;
  }
  .earbits {
    border-top: 0px;
  }
  .feefighters {
    border-right: 0px;
    border-top: 0px;
  }
  .satrails {
    border-left: 0px;
    border-bottom: 0px;
  }
  .yahoo {
    border-bottom: 0px;
  }
  .mapunity {
    border-right: 0px;
    border-bottom: 0px;
  }
  .row1 {
    margin-bottom: 0px;
  }
  .slider {
    .slides {
      background-color: inherit;
    }
  }
  .slider {
    .indicators .indicator-item {
      background-color: #9e9e9e;
    }
    .indicators .indicator-item.active {
      background-color: #4db6ac;
    }
  }
}

#team {
  .card-panel {
    height: 635px;
  }
}

.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  background:
    linear-gradient(
    rgba(0, 0, 0, 0.55), 
    rgba(0, 0, 0, 0.55)
  );
}
.parallax-container .section {
  width: 100%;
}

#parallax-container1, #parallax-container2, #parallax-container3 {
  h4{
    color: #fff;
  }
  h5 {
    color: #fff;
  }
}

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
  #header {
    h1 {
      font-size: 60px;
    }
  }
  .services {
    .first, .second, .third  {
      height: 330px;
    }
  }
  .hows {
    .first, .second {
      height: 630px;
      width: 260px;
    }
  }
  .second {
    height: 515px;
  }
  #team {
    .card-panel {
      height: inherit;
    }
  }
  .parallax-container {
    h4{
      font-size: 18px;
      letter-spacing: 3px;
      line-height: 20px;
    }
    h5 {
      font-size: 15px;
      letter-spacing: 3px;
      line-height: 20px;
    }
  }
  #clients {
    .logowrap {
      border: none;
    }
  }
  .repo {
    a {
      font-size: 14px;
      letter-spacing: 1px;
    }
  }
  .side-nav a {
    font-size: 1.2rem;
  }
  .slider {
    height: 440px !important;
    .slides {
      height: 400px !important;
    }
  }
  .contacts .careers, .contacts .media {
    width: 260px;
    a {
      font-size: 14px;
    }
  }
}

@media only screen and (max-width : 600px) {
  body {
    width: 99%;
  }
  #index-banner .section {
    top: 0;
  }
  nav .brand-logo {
    padding-left: 0px;
  }
  #header {
    h1 {
      font-size: 40px;
    }
  }
  .services {
    .first, .second, .third  {
      height: auto;
    }
  }
  .contacts {
    .hire {
      height: 500px;
      margin-top: inherit;
    }
  }
  #clients .logowrap {
    padding-left: 75px;
  }
  .hows {
    .first, .second {
      height: auto;
      width: inherit;
    }
  }
  .repo {
    height: auto;
    a {
      font-size: 12px;
      letter-spacing: .5px;
    }
  }
}

#sidenav-overlay {
  z-index: 1;
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
  height: 200px;
}

